# Stanford_cs336_assignment

./: .gitignore  AGENTS.md  README.md
assignment_1/: AGENTS.md  README.md  pyproject.toml
assignment_1/basic/: Tokenizer.py  __init__.py  assigment_question.py  assignment_question.py  bytes_utils.py  draft.py  model.py  pretokenization.py  pretokenizer.py  pretokenizer_baseline.py  pretokenizer_compile.py  train.py  train_bpe.py  train_bpe_baseline.py
assignment_1/basic/artifacts/: vocab_10k.json
assignment_1/configs/: train_owt.yaml  train_owt_XL.yaml  train_ts.yaml
assignment_1/tests/: adapters.py
